Removed deprecation warnings
Switched to Java 1.12